# python-template

./: .pre-commit-config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/dev/: Dockerfile
.devcontainer/scripts/: post-create.sh
