[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jesus Lopez <jesus@jesusla.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
ruff = "^0.7.4"

[tool.poetry.group.typing.dependencies]
mypy = "^1.13.0"


[tool.ruff]
line-length = 132

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.mypy]
strict = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
