[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Jesus Lopez <jesus@jesusla.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "~3.12"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.9"
ipykernel = "^6.29.5"
pipdeptree = "^2.23.4"
pre-commit = "^4.0.1"
ruff = "^0.7.4"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[tool.poetry.group.typing.dependencies]
mypy = "^1.13.0"


[tool.ruff]
line-length = 132

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]


[tool.mypy]
strict = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
